--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
-    <NoWarn>$(NoWarn);VSTHRD200</NoWarn>
+    <NoWarn>$(NoWarn);VSTHRD200;VSTHRD101</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
