Added Directory.Packages.props and updated dependencies.

--- a/src/AppCoreNet.Mediator/AppCoreNet.Mediator.csproj
+++ b/src/AppCoreNet.Mediator/AppCoreNet.Mediator.csproj
@@ -1,20 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
+    <TargetFrameworks>net8.0;netstandard2.0;net462</TargetFrameworks>
     <Description>Provides default AppCore .NET mediator implementations.</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AppCoreNet.Extensions.DependencyInjection.Abstractions" Version="0.5.1" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFrameworks)' == 'net8.0'">
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFrameworks)' != 'net8.0'">
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="AppCoreNet.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
