--- a/src/AppCoreNet.Mediator.Abstractions/AppCoreNet.Mediator.Abstractions.csproj
+++ b/src/AppCoreNet.Mediator.Abstractions/AppCoreNet.Mediator.Abstractions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
+    <TargetFrameworks>net8.0;netstandard2.0;net462</TargetFrameworks>
     <RootNamespace>AppCoreNet.Mediator</RootNamespace>
     <Description>Provides AppCore .NET abstractions for the mediator.</Description>
   </PropertyGroup>
