--- a/src/AppCoreNet.Mediator.Authentication.Abstractions/AppCoreNet.Mediator.Authentication.Abstractions.csproj
+++ b/src/AppCoreNet.Mediator.Authentication.Abstractions/AppCoreNet.Mediator.Authentication.Abstractions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
+    <TargetFrameworks>net8.0;netstandard2.0;net462</TargetFrameworks>
     <Description>Authentication abstractions for AppCore .NET mediator.</Description>
     <RootNamespace>AppCoreNet.Mediator</RootNamespace>
   </PropertyGroup>
