--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -31,6 +31,9 @@ jobs:
           dotnet-version: |
             8.0.x
             9.0.x
+      - name: Set BUILD_CONFIGURATION
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo "BUILD_CONFIGURATION=Release" >> $GITHUB_ENV
       - name: Restore
         run: dotnet restore
       - name: Build
